examples/test/testpolicy17556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17556
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key29: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value27
          key47: value45
      podSelector:
        matchLabels:
          key10: value9
          key6: value11
